--- a/cert-manager/overlays/uat/kustomization.yaml
+++ b/cert-manager/overlays/uat/kustomization.yaml
@@ -2,3 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+namePrefix: uat-
+helmCharts:
+  - name: cert-manager
+    repo: https://charts.jetstack.io
+    version: 1.16.2
+    releaseName: cert-manager
+    namespace: cert-manager
+    includeCRDs: true
+    valuesFile: values.yaml
