--- a/istio/overlays/stg/kustomization.yaml
+++ b/istio/overlays/stg/kustomization.yaml
@@ -2,3 +2,23 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+namePrefix: stg-
+helmCharts:
+  - name: base
+    repo: https://istio-release.storage.googleapis.com/charts
+    version: 1.24.1
+    namespace: istio-system
+    includeCRDs: true
+    valuesFile: base-values.yaml
+  - name: istiod
+    repo: https://istio-release.storage.googleapis.com/charts
+    version: 1.24.1
+    namespace: istio-system
+    includeCRDs: true
+    valuesFile: istiod-values.yaml
+  - name: gateway
+    repo: https://istio-release.storage.googleapis.com/charts
+    version: 1.24.1
+    namespace: istio-system
+    includeCRDs: true
+    valuesFile: gateway-values.yaml
