--- a/vault/overlays/prd/kustomization.yaml
+++ b/vault/overlays/prd/kustomization.yaml
@@ -2,3 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+namePrefix: prd-
+helmCharts:
+  - name: vault
+    repo: https://helm.releases.hashicorp.com
+    version: 0.29.1
+    namespace: vault
+    includeCRDs: true
+    valuesFile: values.yaml
